--- a/package.json
+++ b/package.json
@@ -14,9 +14,22 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.17.11",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "@fortawesome/fontawesome-svg-core": "1.2.30",
+    "@fortawesome/free-brands-svg-icons": "5.14.0",
+    "@fortawesome/free-regular-svg-icons": "5.14.0",
+    "@fortawesome/free-solid-svg-icons": "5.14.0",
+    "@fortawesome/pro-light-svg-icons": "5.14.0",
+    "@fortawesome/pro-regular-svg-icons": "5.14.0",
+    "@fortawesome/pro-solid-svg-icons": "5.14.0",
+    "@fortawesome/react-fontawesome": "0.1.11",
+    "gatsby": "2.20.29",
+    "gatsby-image": "2.3.5",
+    "gatsby-plugin-sharp": "2.5.7",
+    "gatsby-source-filesystem": "2.2.5",
+    "gatsby-transformer-sharp": "2.4.7",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "typeface-quicksand": "1.1.4"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
