--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@fortawesome/react-fontawesome": "0.1.11",
     "gatsby": "2.20.29",
     "gatsby-image": "2.3.5",
+    "gatsby-plugin-react-helmet": "3.3.10",
     "gatsby-plugin-sharp": "2.5.7",
     "gatsby-source-filesystem": "2.2.5",
     "gatsby-transformer-sharp": "2.4.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-helmet": "6.1.0",
     "typeface-quicksand": "1.1.4"
   },
   "devDependencies": {
