--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/react-fontawesome": "0.1.11",
     "gatsby": "2.20.29",
     "gatsby-image": "2.3.5",
+    "gatsby-plugin-google-analytics": "2.3.13",
     "gatsby-plugin-react-helmet": "3.3.10",
     "gatsby-plugin-sharp": "2.5.7",
     "gatsby-source-filesystem": "2.2.5",
